CHange folder structure
Use new model architecture based on pytorch_unet from kaggle.

--- a/_old/Dockerfile - 2021.02.08
+++ b/_old/Dockerfile - 2021.02.08
@@ -1,13 +1,9 @@
-FROM nvidia/cuda:10.2-base
-CMD nvidia-smi
-
 FROM pytorch/pytorch:latest
 
-
+RUN python3 -m pip install Pillow
+RUN python3 -m pip install tifffile
 RUN apt-get update
 RUN apt-get install ffmpeg libsm6 libxext6  -y
 RUN python3 -m pip install opencv-python
-RUN apt-get -y install git
 RUN python3 -m pip install matplotlib
-RUN python3 -m pip install pandas
-RUN python3 -m pip install torchsummary
+RUN apt-get install unzip
